# Framex-Studio

./: COLORS.txt  README.md  extra.txt  main.py  pyproject.toml  requirements.txt  roadmap.md  styling.qss  test.py
Framex Studio Documentation/.obsidian/: workspace.json
Framex Studio Documentation/Framex Studio/: BluePrint.canvas  BluePrint.md  Current Progress.md
editor/: exporter.py  main_window.py  scene_editor.py
editor/panels/: file_system_panel.py  properties_panel.py  scene_view.py
runtime/: game_object.py  scene.py
runtime/components/: script.py  sprite.py  transform.py
serialization/: scene_serializer.py
src/editor/: exporter.py  main_window.py  scene_editor.py
src/editor/panels/: __init__.py  base_panel.py  file_props.py  file_system_panel.py  hierarchy_panel.py  properties_panel.py  scene_view.py
src/runtime/: __init__.py  behavior.py  game.py  game_object.py  scene.py
src/runtime/components/: script.py  sprite.py  transform.py
src/serialization/: __init__.py  prefab_serializer.py  scene_serializer.py
src/settings/: __init__.py  color.json  storage.py  theme_manager.py
test_game_folder/scenes/: scene.scene copy.json  scene.scene.json  scene1.scene copy 3.json
